2000-04-18  Per Bothner  <per@bothner.com>

	* Position.java:  Fix missing comment terminator.

2000-04-17  Per Bothner  <per@bothner.com>

	* AbstractString.java:  New class, extends UniformVector.
	* FString.java:  Changed to extend AbstractString.
	(getTag, copy, get, setAll, makeUpperCase, makeLowerCase,
	makeCapitalize, get):  Moved to AbstractString.
	(writeTo, replace):  New method.
	* CharBuffer.java:  New class, extends AbstractString.
	Moved some logic from gnu.jemacs.buffer.BufferContent, but simplified
	data structure managing positions.
	* SubString.java:  New class, extends AbstractString.
	* Position.java:  New class, similar t
	* Makefile.am (java_JAVA):  Update for new classes.

2000-03-17  Per Bothner  <per@bothner.com>

	* Char.java (nameToChar):  Handle Unicode syntax: #\uaaaa .

2000-03-12  Per Bothner  <per@bothner.com>

	* UniformVector.java (setAll):  New method.
	* FVector.java: Extend UniformVector, rather than Sequence directly.
	(set):  Subsumed by version in Unifromvector.
	* FString.java: Extend UniformVector, rather than Sequence directly.
	(setElementAt, setAll):  New methods.

2000-02-26  Per Bothner  <per@bothner.com>

	* Pair.java (equals(Pair,Pair)):  Generalize to handle null.

2000-02-19  Per Bothner  <per@bothner.com>

	* FVector.java (makeLiteral):  Update unqualified package name.

2000-01-24  Per Bothner  <per@bothner.com>

	* FVector.java (setAll):  New method.

2000-01-22  Per Bothner  <per@bothner.com>

	* LList.java (list4, chain1, chain4):  New static methods.

1999-12-10  Per Bothner  <per@bothner.com>

	New directory.
	* Sequence.java, Pair.java, PairWithPosition.java, FString.java,
	Char.java:  Moved from kawa/lang.
	* LList.java:  Renamed from kawa/lang/List.java.
	* FVector.java:  Renamed from kawa/lang/Vector.java.
	* Makefile.am, Makefile.in:  New files.

	* UniformVector.java:  New abstract class.
	* S8Vector.java, S16Vector.java, S32Vector.java, S64Vector.java,